# libpool

./: CMakeLists.txt  Stuff.lnk
libpool/: libpool.cpp  libpool.h
test/: build.bat  main.cpp
